small change to webpage url

--- a/cv-sida-react/package.json
+++ b/cv-sida-react/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://michaelw-jpg.github.io/cv-sida-react",
+  "homepage": "https://michaelw-jpg.github.io/",
   "name": "cv-sida-react",
   "private": true,
   "version": "0.0.0",
